<resources>
    <string name="app_name">QuickListApp</string>
    <string name="action_settings">Settings</string>
    <string name="txt_add_name">Add Product Name</string>
    <string name="hint_add_name">Add Product Name</string>
    <string name="txt_upload_img">Upload Image</string>
    <string name="txt_add_descp">Add Product Description</string>
    <string name="hint_prod_descp">Add Product Description</string>
    <string name="txt_add_cate">Add Product Category</string>
    <string name="hint_prod_cate">Add Product Category</string>
    <string name="bt_add_prod">Add Product</string>
    <string name="bt_choose_img">Choose Product Image</string>
</resources>
