<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    android:layout_margin="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/txt_add_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_add_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/edt_add_prod_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_add_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_upload_img"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ImageView
            android:contentDescription="@string/txt_upload_img"
            android:id="@+id/img_add_prod_image"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bt_choose_image"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentLeft="true" />
    <Button
        android:id="@+id/bt_choose_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bt_choose_img"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_add_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_add_descp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edt_add_prod_descp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_add_name"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/txt_add_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_prod_cate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <EditText
            android:id="@+id/edt_add_prod_cate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_prod_cate"/>
    </LinearLayout>
    <Button
        android:id="@+id/bt_add_prod"
        android:text="@string/bt_add_prod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>